subprojects/groovy-parser-antlr4/src/test/resources/fail/For_01.groovy
for (*a; a.size() < 10;) {}